--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   flutter_screenutil: ^5.9.0
+  zoom_tap_animation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
